--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.121.3",
+    "pandas>=2.3.3",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "uvicorn>=0.38.0",
