--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "config>=0.5.1",
     "fastapi>=0.121.3",
     "pandas>=2.3.3",
     "requests>=2.32.5",
