--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -89,6 +89,7 @@ ipython_config.py
 *.csv
 *.json
 
+
 overpass_response.json
 
 config.py
@@ -181,3 +182,4 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+*.pyc
